force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <description>This field is optional and is automatically populated.  This is a master-detail lookup that associates the correct relationship to the Account Document placeholder in the Relationship Document Manager.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AccountDocuments</relationshipLabel>
    <relationshipName>AccountDocuments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>