force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__approvedBy__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__approvedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and only used in classic Doc Man. It is a lookup to the user who approved this document in classic Relationship Document Manager.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>