force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__comments__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__comments__c</fullName>
    <description>This field retains the most recent comment on a placeholder in classic Document Manager. This field is not used in Document Manager.</description>
    <label>Comments</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>