force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__docManager__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__docManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and is automatically populated. It is a lookup to which Relationship Document Manager the placeholder is located on.</description>
    <label>DocManager</label>
    <referenceTo>LLC_BI__DocManager__c</referenceTo>
    <relationshipLabel>AccountDocuments</relationshipLabel>
    <relationshipName>AccountDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>