force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__docTab__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__docTab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and automatically populated. It is only used in classic Doc Man, but is populated for Document Manager as well. It is a lookup to which Tab on a classic Document Manager a placeholder is found on.</description>
    <label>DocTab</label>
    <referenceTo>LLC_BI__DocTab__c</referenceTo>
    <relationshipLabel>AccountDocuments</relationshipLabel>
    <relationshipName>AccountDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>