force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__Document_Store_Index__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Document_Store_Index__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field populates automatically and associates placeholder records and document store records. It is where Notes and Attachments and Content are stored.</description>
    <label>Document Store Index</label>
    <referenceTo>LLC_BI__Document_Store_Index__c</referenceTo>
    <relationshipLabel>Account Documents</relationshipLabel>
    <relationshipName>AccountDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>