force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__exceptionDate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__exceptionDate__c</fullName>
    <description>This field is optional. It is a date field used to specify a date at which a document has been or will be placed in Exception status. If the Exception Date is in the future, when that date is reached the status will automatically change to Exception.</description>
    <label>Exception Date</label>
    <type>Date</type>
</CustomField>