force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__Parent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used internally. This is the parent placeholder for archived placeholders</description>
    <label>Parent</label>
    <referenceTo>LLC_BI__AccountDocument__c</referenceTo>
    <relationshipLabel>AccountDocuments</relationshipLabel>
    <relationshipName>children</relationshipName>
    <type>Lookup</type>
</CustomField>