force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__Portal_Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Portal_Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and shows, in Document Manager, which user uploaded the file via Customer Portal.</description>
    <label>Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UploadedAccountDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>