force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__Requirement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional field. It is a lookup that links the Placeholder to a Requirement.</description>
    <label>Requirement</label>
    <referenceTo>LLC_BI__Requirement__c</referenceTo>
    <relationshipLabel>AccountDocuments</relationshipLabel>
    <relationshipName>AccountDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>