force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__reviewDate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__reviewDate__c</fullName>
    <description>This field is optional and represents the date when a document was reviewed by a user. This field does not auto-populate when a user changes the Status field to Reviewed.</description>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>