force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/LLC_BI__reviewedBy__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__reviewedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and displays the user who reviewed the document with their role.</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountDocuments1</relationshipName>
    <type>Lookup</type>
</CustomField>