force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/NDOC__Is_Staged__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Is_Staged__c</fullName>
    <description>This field is optional and is automatically populated. Formula field to determine if document is in staging.</description>
    <formula>ISBLANK(LLC_BI__docType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Staged</label>
    <type>Checkbox</type>
</CustomField>