force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/NDOC__isTrash__c.field-meta.xml
<CustomField>
    <fullName>NDOC__isTrash__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and auto-populates. When a document is trashed, this field is checked and the document appears in the trash/archive area of Document Manager.</description>
    <label>isTrash</label>
    <type>Checkbox</type>
</CustomField>