force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/NDOC__Trashed_Date__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Trashed_Date__c</fullName>
    <description>This field is optional and auto-populates. This field stores the date and time that a document is trashed.</description>
    <label>Trashed Date</label>
    <type>DateTime</type>
</CustomField>