force-app/main/default/objects/LLC_BI__AccountDocument__c/fields/NDOC__Year__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Year__c</fullName>
    <description>The administrator populates this optional text field to store the document year. By default it is blank.</description>
    <label>Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>